# linked-list-c

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: cmake-debug.yml
src/: linkedlist.h  linkedlist_add.c  linkedlist_add_back.c  linkedlist_add_front.c  linkedlist_apply.c  linkedlist_create.c  linkedlist_destroy.c  linkedlist_dump_console.c  linkedlist_dump_dotgraph.c  linkedlist_find.c  linkedlist_find_first.c  linkedlist_find_last.c  linkedlist_get.c  linkedlist_get_back.c  linkedlist_get_front.c  linkedlist_is_empty.c  linkedlist_iterator_create.c  linkedlist_iterator_destroy.c  linkedlist_iterator_has_next.c  linkedlist_iterator_next.c  linkedlist_merge.c  linkedlist_remove.c  linkedlist_remove_if.c  linkedlist_remove_if_null.c  linkedlist_reverse.c  linkedlist_size.c  linkedlist_sort.c
test/: main.c  strcmp_with_s2_nullcheck.c  test_linkedlist_add.c  test_linkedlist_add_back.c  test_linkedlist_add_front.c  test_linkedlist_apply.c  test_linkedlist_create_and_destroy.c  test_linkedlist_find.c  test_linkedlist_find_first.c  test_linkedlist_find_last.c  test_linkedlist_get.c  test_linkedlist_get_back.c  test_linkedlist_get_front.c  test_linkedlist_is_empty.c  test_linkedlist_iterator_next.c  test_linkedlist_merge.c  test_linkedlist_remove.c  test_linkedlist_remove_if_null.c  test_linkedlist_reverse.c  test_linkedlist_size.c  test_linkedlist_sort.c  unittest.h
